# MicroPomo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.cmd  lv_conf.h  simulator.code-workspace
doc/: .$PomodoroStateMachine.drawio.bkp
src/: main.c
src/podo/: CMakeLists.txt
src/podo/Core/: event.h  pomodoro.c  pomodoro.h  timer.c
src/pomodoro/: CMakeLists.txt  readme.md
src/pomodoro/Core/: event.c  pomodoro.c  pomodoro.h  timer.c
src/pomodoro/UI/: demo.c  demo.h  full_screen.c  main_screen.c  main_screen.h  settings_screen.c  settings_screen.h
